tests/functional/lang/parse-fail-patterns-1.err.exp
at «stdin»:1:1:
            1| args@{args, x, y, z}: x
             | ^
            2|

       error: duplicate formal function argument 'args'
